--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -21,5 +21,4 @@ api:
 
 NelmioApiDocBundle:
     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
-    prefix:   /doc
-
+    prefix:   /
