--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,23 @@ SYMFONY__MONOLOG_ACTION_LEVEL=debug
 SYMFONY_SERVER_APP_PATH=/var/www/html
 
 # MySQL
+SYMFONY__DATABASE_DRIVE=pdo_mysql
 SYMFONY__DATABASE_ROOT_PASSWORD=root
 SYMFONY__DATABASE_NAME=api-dojo
 SYMFONY__DATABASE_USER=sf3
 SYMFONY__DATABASE_PASSWORD=sf3
 SYMFONY__DATABASE_HOST=db
 SYMFONY__DATABASE_PORT=3306
+
+#PostGres
+#SYMFONY__DATABASE_DRIVE=pdo_pgsql
+#SYMFONY__DATABASE_ROOT_PASSWORD=root
+#SYMFONY__DATABASE_NAME=api-dojo
+#SYMFONY__DATABASE_USER=root
+#SYMFONY__DATABASE_PASSWORD=root
+#SYMFONY__DATABASE_HOST=symfony_db
+#SYMFONY__DATABASE_PORT=5432
+
 # Mail
 SYMFONY__MAILER_TRANSPORT=smtp
 SYMFONY__MAILER_USER=null
