--- a/docker-compose.yml.dist
+++ b/docker-compose.yml.dist
@@ -105,19 +105,21 @@ services:
           development:
             ipv4_address: 10.10.10.30
         restart: always
-    postgres:
-        image: postgres:9.6.2-alpine
-        container_name: ${SYMFONY__DATABASE_HOST}
-        restart: always
-        volumes:
-          - /etc/localtime:/etc/localtime:ro
-        environment:
-            POSTGRES_DB: ${SYMFONY__DATABASE_NAME}
-            POSTGRES_USER: ${SYMFONY__DATABASE_USER}
-            POSTGRES_PASSWORD: ${SYMFONY__DATABASE_PASSWORD}
-        networks:
-          development:
-             ipv4_address: 10.10.10.100
+
+#    postgres:
+#        image: postgres:9.6.2-alpine
+#        container_name: ${SYMFONY__DATABASE_HOST}
+#        restart: always
+#        volumes:
+#          - /etc/localtime:/etc/localtime:ro
+#        environment:
+#            POSTGRES_DB: ${SYMFONY__DATABASE_NAME}
+#            POSTGRES_USER: ${SYMFONY__DATABASE_USER}
+#            POSTGRES_PASSWORD: ${SYMFONY__DATABASE_PASSWORD}
+#        networks:
+#          development:
+#             ipv4_address: 10.10.10.100
+
     phpmyadmin:
         container_name: ${SYMFONY__DATABASE_HOST}_admin
         image: phpmyadmin/phpmyadmin
