--- a/app/config/config_heroku.yml
+++ b/app/config/config_heroku.yml
@@ -19,3 +19,13 @@ monolog:
             level: debug
         console:
             type:  console
+
+doctrine:
+    dbal:
+        driver:  "pdo_sqlite"
+        path:    "%kernel.root_dir%/../var/cache/api.sqlite"
+        charset: "UTF8"
+    orm:
+        auto_generate_proxy_classes: "%kernel.debug%"
+        naming_strategy: doctrine.orm.naming_strategy.underscore
+        auto_mapping: true
