--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -19,3 +19,25 @@ monolog:
             level: debug
         console:
             type:  console
+
+# Doctrine Configuration
+doctrine:
+    dbal:
+        driver:   pdo_mysql
+        host:     '%env(SYMFONY__DATABASE_HOST)%'
+        port:     '%env(SYMFONY__DATABASE_PORT)%'
+        dbname:   '%env(SYMFONY__DATABASE_NAME)%'
+        user:     '%env(SYMFONY__DATABASE_USER)%'
+        password: '%env(SYMFONY__DATABASE_PASSWORD)%'
+        charset:  UTF8
+        # if using pdo_sqlite as your database driver:
+        #   1. add the path in parameters.yml
+        #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
+        #   2. Uncomment database_path in parameters.yml.dist
+        #   3. Uncomment next line:
+        #     path:     "%database_path%"
+
+    orm:
+        auto_generate_proxy_classes: "%kernel.debug%"
+        naming_strategy: doctrine.orm.naming_strategy.underscore
+        auto_mapping: true
