--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,8 @@
         "ext-mbstring": "*",
         "ext-mcrypt": "*",
         "ext-intl": "*",
+        "sqlite3": "*",
+        "pdo_sqlite": "*",
         "symfony/symfony": "~3.3",
         "symfony/dotenv": "~3.3",
         "doctrine/orm": "^2.5",
