--- a/app.json
+++ b/app.json
@@ -6,16 +6,13 @@
   "success_url": "/homepage-or-smth",
   "repository": "https://github.com/your-nickname/your-repository",
   "logo": "http://exampe.com/this-image-will-be-shown-during-the-creation-of-new-app.png",
-  "addons": [
-    "cleardb"
-  ],
   "env": {
     "SYMFONY_ENV": {
-      "value": "prod"
+      "value": "heroku"
     }
   },
   "scripts": {
     "postdeploy": "php bin/console doctrine:database:create --env=heroku"
-    "postdeploy": "php bin/console doctrine:schema:update --force
+    "postdeploy": "php bin/console doctrine:schema:update --force --env=heroku"
   }
 }
