--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,8 @@
         "ext-mbstring": "*",
         "ext-mcrypt": "*",
         "ext-intl": "*",
-        "ext-sqlite3": "*",
-        "ext-pdo_sqlite": "*",
+        "ext-pdo": "*",
+        "ext-pdo_pgsql": "*",
         "symfony/symfony": "~3.3",
         "symfony/dotenv": "~3.3",
         "doctrine/orm": "^2.5",
