--- a/app/config/config_heroku.yml
+++ b/app/config/config_heroku.yml
@@ -22,7 +22,13 @@ monolog:
 
 doctrine:
     dbal:
-        url: "%env(DATABASE_URL)%"
+        driver:   pdo_pgsql
+        host:     '%env(DATABASE_HOST)%'
+        port:     '%env(DATABASE_PORT)%'
+        dbname:   '%env(DATABASE_NAME)%'
+        user:     '%env(DATABASE_USER)%'
+        password: '%env(DATABASE_PASSWORD)%'
+        charset:  UTF8
         charset: "UTF8"
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
