--- a/composer.json
+++ b/composer.json
@@ -74,16 +74,20 @@
         "doctrine/doctrine-fixtures-bundle": "^2.3"
     },
     "require-dev": {
-        "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0",
-        "liip/functional-test-bundle": "^1.7",
-        "phpunit/phpunit": "^5.7",
-        "mockery/mockery": "^0.9.7",
-        "squizlabs/php_codesniffer": "^2.7",
-        "friendsofphp/php-cs-fixer": "^2.0",
+        "edgedesign/phpqa": "dev-master",
+        "friendsofphp/php-cs-fixer": "~2.2",
         "fzaninotto/faker": "^1.6",
-        "phpstan/phpstan": "^0.6.4",
-        "phpmetrics/phpmetrics": "^2.2"
+        "jakub-onderka/php-console-highlighter": "^0.3.2",
+        "jakub-onderka/php-parallel-lint": "^0.9.2",
+        "liip/functional-test-bundle": "^1.7",
+        "mockery/mockery": "^0.9.7",
+        "phpmetrics/phpmetrics": "^2.2",
+        "phpstan/phpstan": "^0.7.0",
+        "phpunit/phpunit": "^6.2",
+        "sebastian/phpcpd": "~3.0",
+        "sebastian/phpdcd": "*",
+        "sensio/generator-bundle": "^3.0",
+        "symfony/phpunit-bridge": "^3.0"
     },
     "scripts": {
         "symfony-scripts": [
@@ -103,7 +107,21 @@
        "heroku-cmd": [
          "bin/console doctrine:schema:update --force --env=heroku",
          "bin/console hautelook_alice:doctrine:fixtures:load -n --env=heroku"
-       ]
+       ],
+       "report": [
+        "rm -rf report/*",
+        "vendor/bin/phpqa --report --tools phpunit,phpcs:0,phpmd:0,phpcpd:0,parallel-lint:0,phpstan:0,phploc,pdepend,php-cs-fixer,phpmetrics --config=qa --analyzedDirs=src --buildDir=report || true",
+         "vendor/bin/phpmetrics  --exclude='vendor' --exclude='var' --extensions=php --junit=report/log-junit.xml --git=/usr/bin/git --report-html='report/phpmetrics/' --report-violations='report/phpmetrics.xml' 'composer.json,./src,./tests'"
+      ],
+      "report-run": [
+        "@report",
+        "php -S 0.0.0.0:8000 -t report"
+      ],
+      "code-dead": [
+        "vendor/bin/phpcpd --progress  --exclude vendor --exclude var src || true",
+        "vendor/bin/phpdcd --exclude vendor --exclude var src || true",
+        "vendor/bin/parallel-lint -j 2  --exclude vendor --exclude var src"
+      ]
     },
     "extra": {
         "symfony-app-dir": "app",
