--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -3,29 +3,37 @@
 <!-- https://phpunit.de/manual/current/en/appendixes.configuration.html -->
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.8/phpunit.xsd"
-         backupGlobals="false"
          colors="true"
-         bootstrap="app/autoload.php"
+         backupGlobals="false"
+         backupStaticAttributes="false"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="true"
+         convertWarningsToExceptions="true"
+         processIsolation="false"
+         stopOnFailure="false"
+         syntaxCheck="false"
+         bootstrap="vendor/autoload.php"
 >
-    <php>
-        <ini name="error_reporting" value="-1" />
-        <server name="KERNEL_DIR" value="app/" />
-    </php>
+  <php>
+    <ini name="error_reporting" value="-1" />
+    <server name="KERNEL_DIR" value="app/" />
+    <env name="TEST_BASE_URL" value="http://url" />
+  </php>
 
-    <testsuites>
-        <testsuite name="Project Test Suite">
-            <directory>tests</directory>
-        </testsuite>
-    </testsuites>
+  <testsuites>
+    <testsuite name="Project Test Suite">
+      <directory>tests</directory>
+    </testsuite>
+  </testsuites>
 
-    <filter>
-        <whitelist>
-            <directory>src</directory>
-            <exclude>
-                <directory>src/*Bundle/Resources</directory>
-                <directory>src/*/*Bundle/Resources</directory>
-                <directory>src/*/Bundle/*Bundle/Resources</directory>
-            </exclude>
-        </whitelist>
-    </filter>
+  <filter>
+    <whitelist>
+      <directory>src</directory>
+      <exclude>
+        <directory>src/*Bundle/Resources</directory>
+        <directory>src/*/*Bundle/Resources</directory>
+        <directory>src/*/Bundle/*Bundle/Resources</directory>
+      </exclude>
+    </whitelist>
+  </filter>
 </phpunit>
